--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "confluent-kafka>=2.12.0",
+    "confluent-kafka[avro]>=2.12.0",
     "polars>=1.34.0",
 ]
