--- a/compose.yaml
+++ b/compose.yaml
@@ -67,7 +67,17 @@ services:
       - ./grafana/provisioning:/etc/grafana/provisioning
     depends_on:
       - cassandra
-
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "8080:8080"
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=broker:29092
+      - KAFKA_CLUSTERS_0_METRICS_PORT=9997
+    depends_on:
+      - broker
 volumes:
   cassandra_data:
   grafana_data:
