fix: chown action

--- a/.github/workflows/test-spark.yml
+++ b/.github/workflows/test-spark.yml
@@ -32,6 +32,12 @@ jobs:
     # 1.5. Spin up Docker so we don't have to wait
     - name: Start Docker Services
       run: docker compose up -d
+    
+    # 1.6. Ownership fix
+    - name: chown fix for Broker
+      run: |
+        mkdir kafka/kafka_data
+        sudo chown -R $USER:$USER kafka/kafka_data/
 
     # 2. Install Spark (Cached to speed up runs)
     - name: Cache Spark
