--- a/compose.yaml
+++ b/compose.yaml
@@ -12,10 +12,11 @@ services:
     image: apache/kafka:latest
     hostname: broker
     container_name: broker
+    user: root
     ports:
       - 9092:9092
     volumes:
-      - ./kafka/kafka_data:/tmp/kraft-combined-logs
+      - kafka_data:/tmp/kraft-combined-logs
     environment:
       # Kraft setting
       KAFKA_BROKER_ID: "1"
@@ -120,6 +121,7 @@ volumes:
   cassandra_data:
   grafana_data:
   spark-checkpoints:
+  kafka_data:
 
     # The commented out section below is an example of how to define a PostgreSQL
     # database that your application can use. `depends_on` tells Docker Compose to
