perf: reduce size of images
- combine RUNs in spark
- use uv to install and create venv, then only copy venv to image

--- a/kafka/Dockerfile
+++ b/kafka/Dockerfile
@@ -1,17 +1,31 @@
+# Stage 1: Builder
+FROM python:3.11-slim AS builder
+
+WORKDIR /app
+
+# Install uv via pip to decouple from base image updates if needed
+RUN pip install --no-cache-dir uv
+
+# Copy dependency definition
+COPY pyproject.toml uv.lock ./
+
+# Install dependencies into a virtual environment
+# --frozen ensures we stick to the lockfile
+RUN uv sync --frozen
+
+# Stage 2: Runtime
 FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install uv
-RUN pip install --no-cache-dir uv
+# Copy the virtual environment from the builder stage
+COPY --from=builder /app/.venv /app/.venv
 
-# Copy only dependency metadata first (cache-friendly)
-COPY pyproject.toml uv.lock ./
-
-# Install deps
-RUN uv sync
-
-# Copy producer code
+# Copy application code
 COPY kafka/producer.py ./producer.py
 
-CMD ["uv", "run", "python", "producer.py"]
+# Add virtualenv to PATH so we can run python/uv commands directly
+ENV PATH="/app/.venv/bin:$PATH"
+
+# Run the producer directly with python (no need for uv run overhead in runtime)
+CMD ["python", "producer.py"]
