--- a/compose.yaml
+++ b/compose.yaml
@@ -48,7 +48,7 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=broker:29092
     volumes:
       - ./data:/data
-    command: sh -c "sleep 10 && uv run python producer.py"
+    command: sh -c "sleep 10 && python producer.py"
     restart: unless-stopped
 
   cassandra:
