--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -57,7 +57,7 @@ jobs:
         uv pip install cassandra-driver
         
         echo "Running Integration Test Script..."
-        timeout 60s uv run python tests/integration_test.py
+        timeout 120s .venv/bin/python tests/integration_test.py
 
     # 5. Cleanup / Logs
     - name: Dump Docker Logs on Failure
