--- a/compose.yaml
+++ b/compose.yaml
@@ -1,41 +1,36 @@
-# Comments are provided throughout this file to help you get started.
-# If you need more help, visit the Docker Compose reference guide at
-# https://docs.docker.com/go/compose-spec-reference/
-
-# Here the instructions define your application as a service called "app".
-# This service is built from the Dockerfile in the current directory.
-# You can add other services your application may depend on here, such as a
-# database or a cache. For examples, see the Awesome Compose repository:
-# https://github.com/docker/awesome-compose
 services:
   broker:
     image: apache/kafka:latest
+    user: root
     hostname: broker
     container_name: broker
-    user: root
     ports:
       - 9092:9092
     volumes:
       - kafka_data:/tmp/kraft-combined-logs
     environment:
-      # Kraft setting
+      # --- Tối ưu RAM cho Kafka (Quan trọng) ---
+      KAFKA_HEAP_OPTS: "-Xmx400M -Xms400M"
+      # -----------------------------------------
       KAFKA_BROKER_ID: "1"
       KAFKA_PROCESS_ROLES: "broker,controller"
       KAFKA_NODE_ID: "1"
       KAFKA_CONTROLLER_QUORUM_VOTERS: "1@broker:29093"
-
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONTROLLER:PLAINTEXT"
       KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: "0"
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: "1"
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: "1"
-      # Bind internal listeners to 0.0.0.0 so services on the docker network can connect
       KAFKA_LISTENERS: "PLAINTEXT://0.0.0.0:29092,CONTROLLER://0.0.0.0:29093,PLAINTEXT_HOST://0.0.0.0:9092"
       KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
       KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
       KAFKA_LOG_DIRS: "/tmp/kraft-combined-logs"
       CLUSTER_ID: "MkU3OEVBNTcwNTJENDM2Qk"
+    deploy:
+      resources:
+        limits:
+          memory: 600M
 
   producer: 
     build: 
@@ -45,8 +40,12 @@ services:
       - broker
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=broker:29092
-    command: sh -c "sleep 10 && uv run python producer.py"
+    command: sh -c "sleep 20 && uv run python producer.py" # Tăng sleep để Kafka kịp thở
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 1G
 
   cassandra:
     image: cassandra:4.1
@@ -57,14 +56,23 @@ services:
       - CASSANDRA_CLUSTER_NAME=TaxiCluster
       - CASSANDRA_DC=datacenter1
       - CASSANDRA_RACK=rack1
+      # --- Tối ưu RAM cho Cassandra (Cực kỳ quan trọng) ---
+      # Giới hạn Heap xuống 2GB (Mặc định nó có thể ăn tới 4GB)
+      - MAX_HEAP_SIZE=2048M
+      - HEAP_NEWSIZE=200M
+      # ----------------------------------------------------
     volumes:
       - cassandra_data:/var/lib/cassandra
       - ./cassandra:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD", "cqlsh", "-e", "describe keyspaces"]
-      interval: 10s
-      timeout: 5s
+      interval: 20s
+      timeout: 10s
       retries: 10
+    deploy:
+      resources:
+        limits:
+          memory: 2.5G
 
   spark:
     build:
@@ -85,12 +93,22 @@ services:
       - SPARK_LOCAL_DIRS=/tmp
       - KAFKA_BOOTSTRAP_SERVERS=broker:29092
       - CASSANDRA_HOST=cassandra
+    # --- Tối ưu Command Spark ---
+    # 1. Giới hạn driver/executor memory
+    # 2. Giảm số core xuống local[2] thay vì local[*] để giảm tải CPU/RAM
     command: >
       /opt/spark/bin/spark-submit
-      --master local[*]
+      --master local[2]
+      --driver-memory 1536m
+      --executor-memory 1536m
+      --conf spark.cassandra.connection.keep_alive_ms=5000
       --jars /opt/spark-jars/spark-sql-kafka-0-10_2.12-3.5.1.jar,/opt/spark-jars/kafka-clients-3.4.1.jar,/opt/spark-jars/spark-token-provider-kafka-0-10_2.12-3.5.1.jar,/opt/spark-jars/commons-pool2-2.11.1.jar,/opt/spark-jars/spark-cassandra-connector-assembly_2.12-3.5.1.jar
       --conf spark.sql.streaming.checkpointLocation=/tmp/spark_checkpoints
       /opt/spark-apps/streaming.py
+    deploy:
+      resources:
+        limits:
+          memory: 2G
 
   grafana:
     image: grafana/grafana:latest
@@ -106,6 +124,11 @@ services:
       - ./grafana/provisioning:/etc/grafana/provisioning
     depends_on:
       - cassandra
+    deploy:
+      resources:
+        limits:
+          memory: 400M
+
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
@@ -117,41 +140,13 @@ services:
       - KAFKA_CLUSTERS_0_METRICS_PORT=9997
     depends_on:
       - broker
+    deploy:
+      resources:
+        limits:
+          memory: 400M
+
 volumes:
   cassandra_data:
   grafana_data:
   spark-checkpoints:
   kafka_data:
-
-    # The commented out section below is an example of how to define a PostgreSQL
-    # database that your application can use. `depends_on` tells Docker Compose to
-    # start the database before your application. The `db-data` volume persists the
-    # database data between container restarts. The `db-password` secret is used
-    # to set the database password. You must create `db/password.txt` and add
-    # a password of your choosing to it before running `docker compose up`.
-    #     depends_on:
-    #       db:
-    #         condition: service_healthy
-    #   db:
-    #     image: postgres
-    #     restart: always
-    #     user: postgres
-    #     secrets:
-    #       - db-password
-    #     volumes:
-    #       - db-data:/var/lib/postgresql/data
-    #     environment:
-    #       - POSTGRES_DB=example
-    #       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-    #     expose:
-    #       - 5432
-    #     healthcheck:
-    #       test: [ "CMD", "pg_isready" ]
-    #       interval: 10s
-    #       timeout: 5s
-    #       retries: 5
-    # volumes:
-    #   db-data:
-    # secrets:
-    #   db-password:
-    #     file: db/password.txt
