--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -32,15 +32,18 @@ jobs:
         import pyarrow as pa
         import pyarrow.parquet as pq
         
+        # Define the number of minutes in 3 days
+        num_periods = 3 * 24 * 60  # 4320 rows
+        
         df = pd.DataFrame({
-            'VendorID': [1, 2] * 50,
-            'tpep_pickup_datetime': pd.date_range(start='2025-08-01', periods=100, freq='S'),
-            'tpep_dropoff_datetime': pd.date_range(start='2025-08-01 00:10:00', periods=100, freq='S'),
-            'passenger_count': np.random.randint(1, 5, 100),
-            'trip_distance': np.random.rand(100) * 10,
-            'PULocationID': np.random.randint(1, 263, 100),
-            'DOLocationID': np.random.randint(1, 263, 100),
-            'total_amount': np.random.rand(100) * 50
+            'VendorID': [1, 2] * (num_periods // 2),
+            'tpep_pickup_datetime': pd.date_range(start='2025-08-01', periods=num_periods, freq='min'),
+            'tpep_dropoff_datetime': pd.date_range(start='2025-08-01 00:10:00', periods=num_periods, freq='min'),
+            'passenger_count': np.random.randint(1, 5, num_periods),
+            'trip_distance': np.random.rand(num_periods) * 10,
+            'PULocationID': np.random.randint(1, 263, num_periods),
+            'DOLocationID': np.random.randint(1, 263, num_periods),
+            'total_amount': np.random.rand(num_periods) * 50
         })
         table = pa.Table.from_pandas(df)
         pq.write_table(table, 'data/yellow_tripdata_2025-08.parquet')
