feat: Spark job running daily
For now it's only a perpetual service sleeping every 24s

--- a/compose.yaml
+++ b/compose.yaml
@@ -48,7 +48,7 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=broker:29092
     volumes:
       - ./data:/data
-    command: sh -c "sleep 10 && python producer.py"
+    command: sh -c "sleep 10 && python producer.py --speedup 3600.0"
     restart: no
 
   cassandra:
@@ -106,6 +106,27 @@ services:
       --jars /opt/spark-jars/spark-sql-kafka-0-10_2.12-3.5.1.jar,/opt/spark-jars/kafka-clients-3.4.1.jar,/opt/spark-jars/spark-token-provider-kafka-0-10_2.12-3.5.1.jar,/opt/spark-jars/commons-pool2-2.11.1.jar,/opt/spark-jars/spark-cassandra-connector-assembly_2.12-3.5.1.jar
       --conf spark.sql.streaming.checkpointLocation=/tmp/spark_checkpoints
       /opt/spark-apps/streaming.py
+
+  spark-batch:
+    build:
+      context: .
+      dockerfile: spark/Dockerfile
+    container_name: spark-batch
+    depends_on:
+      cassandra:
+        condition: service_healthy  
+      init-cassandra:
+        condition: service_completed_successfully
+      broker:
+        condition: service_started
+    volumes:
+      - ./spark:/opt/spark-apps
+      - spark-checkpoints:/tmp/spark_checkpoints
+    environment:
+      - SPARK_LOCAL_DIRS=/tmp
+      - KAFKA_BOOTSTRAP_SERVERS=broker:29092
+      - CASSANDRA_HOST=cassandra
+    command: python3 /opt/spark-apps/scheduler.py --speedup 3600.0
 
   grafana:
     image: grafana/grafana:latest
