--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -60,7 +60,7 @@ jobs:
         uv pip install cassandra-driver
         
         echo "Running Integration Test Script..."
-        timeout 180s .venv/bin/python tests/integration_test.py
+        .venv/bin/python tests/integration_test.py
 
     # 5. Cleanup / Logs
     - name: Dump Docker Logs on Failure
