feat: batch processing with trigger availableNow, more lenient test
- trigger availableNow auto handle checkpoint, no need to reprocess from topic start
- test wait from 300s -> 600s

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -60,7 +60,7 @@ jobs:
         uv pip install cassandra-driver
         
         echo "Running Integration Test Script..."
-        .venv/bin/python tests/integration_test.py
+        uv run python tests/integration_test.py
 
     # 5. Cleanup / Logs
     - name: Dump Docker Logs on Failure
