--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -66,7 +66,7 @@ jobs:
       run: docker compose up -d broker cassandra init-cassandra spark producer
 
     - name: Run Stream Verification
-      run: uv run --with cassandra-driver tests/integration_test.py --table global_kpis_30m
+      run: uv run --with cassandra-driver tests/integration_test.py --table zone_performance_30m
 
     - name: Dump Logs on Failure
       if: failure()
@@ -92,11 +92,8 @@ jobs:
     - name: Start Batch Services
       run: docker compose up -d broker cassandra init-cassandra spark-batch producer
 
-    - name: Sleep to warm up
-      run: sleep 60
-      
     - name: Run Batch Verification
-      run: uv run --with cassandra-driver tests/integration_test.py --table global_kpis_1d
+      run: uv run --with cassandra-driver tests/integration_test.py --table zone_performance_1d
 
     - name: Dump Logs on Failure
       if: failure()
