--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.11"
 dependencies = [
     "cassandra-driver>=3.29.3",
     "confluent-kafka[avro]>=2.12.0",
+    "fastapi>=0.128.0",
     "polars>=1.34.0",
     "pyspark==3.5.7",
+    "requests>=2.32.5",
+    "uvicorn>=0.40.0",
 ]
