fix: grafana connection in k8s update: k8s readme

--- a/kubernetes/00-core.yaml
+++ b/kubernetes/00-core.yaml
@@ -18,3 +18,6 @@ data:
         url: cassandra:9042
         jsonData:
           keyspace: taxi_streaming
+          consistency: ONE
+        isDefault: true
+        editable: true
